# PeerZero

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.jsonc  .oxlintrc.jsonc  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  lefthook.yml  package.json  turbo.json
.agents/skills/add-package/: SKILL.md
.agents/skills/api-endpoint/: SKILL.md
.agents/skills/audit/: SKILL.md
.agents/skills/codebase-map/: SKILL.md
.agents/skills/design/: SKILL.md
.agents/skills/desktop/: SKILL.md
.agents/skills/dev/: SKILL.md
.agents/skills/doc-sync/: SKILL.md
.agents/skills/docker-test/: SKILL.md
.agents/skills/fonts/: SKILL.md
.agents/skills/icebox/: SKILL.md
.agents/skills/ignore-sync/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/runtime-apis/: SKILL.md  index.md
.agents/skills/ui-verify/: SKILL.md
.agents/skills/video-debug/: SKILL.md
.github/notes/: competitive-audit.md  dependencies.md  libmedia-player.md  libmpv.md
.github/notes/plans/: ai-media-naming.md  merge-backend-apis.md  native-video-player.md
.github/plans/: ICEBOX.md  media-playback.md
.github/scripts/: build-sizes.ts  portless.ts  refresh-registry.ts  seal-registry.ts  shadcn-customize.ts  vendor-libmedia.ts
.github/workflows/: auto-check-build.yml  auto-refresh-registry.yml  auto-release.yml  desktop-release-canary.yml  desktop-release-macos.yml  desktop-release.yml
api/hono/: Dockerfile  bunfig.toml  package.json
api/hono/scripts/: build-bundle.mjs
api/hono/src/: app.e2e.test.ts  index.ts
api/torrent-engine/: bunfig.toml  package.json
api/torrent-engine/scripts/: build-binary.mjs
api/torrent-engine/src/: index.mjs  media-library.integration.test.mjs  media-library.mjs  media-library.test.mjs  webrtc-stub-plugin.mjs  webrtc-stub.mjs
desktop/: README.md  libmpv.lock.json
desktop/backend/: build.ts  main.ts  serve-static.ts
desktop/scripts/: build-app.sh  bundle-libmpv.py  ensure-libmpv.sh  fetch-libmpv.sh  prebuild-libmpv.sh  vendor-libmpv-closure.py
desktop/src-tauri/: .gitignore  Cargo.toml  Info.canary.plist  build.rs  canary.conf.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/icons-canary/: icon.icns
desktop/src-tauri/src/: lib.rs  mpv.rs  mpv_render.rs  splash.rs
tests/: README.md  package.json
tests/api-hono/: app.golden.test.ts  bunfig.toml  free-file-bytes.test.ts  run.ts  tsconfig.json  webtorrent.d.ts
tests/api-hono/fixtures/: constants.ts  seed.ts
tests/api-hono/golden/: add-invalid.txt  add.txt  delete-invalid.txt  delete-unknown.txt  delete.txt  fixture-snapshot.txt  headers-forbidden.txt  health.txt  not-found.txt  pause-resume.txt  pause-unknown.txt  resume-unknown.txt  root.txt  settings-get.txt  sources-refresh.txt  sources.txt  stream-416.txt  stream-full-headers.txt  stream-head.txt  stream-nan-index.txt  stream-range-headers.txt  stream-suffix-headers.txt  stream-unknown.txt
tests/api-hono/lib/: golden.ts
tests/web-next/: mpv-tracks.test.ts  tsconfig.json
web/next/: Dockerfile  docs.config.ts  next.config.ts  package.json  tsconfig.json
(+123 files in other folders)
