[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# The native mpv player is macOS-only (the render layer uses CAOpenGLLayer + the libmpv OpenGL render
# API). Gating these to macOS keeps the Windows/Linux builds from linking libmpv - libmpv2-sys emits
# `cargo:rustc-link-lib=mpv` with no search path or bundled source, so an ungated dep would fail those
# release jobs at link time. Non-macOS has no in-app player (download-only; see file-tree.tsx).
[target.'cfg(target_os = "macos")'.build-dependencies]
# Resolve libmpv's link-search path (libmpv2-sys emits only `-lmpv`, no search path). See build.rs.
pkg-config = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
libmpv2 = "6.0.0"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSThread", "NSGeometry"] }
objc2-quartz-core = { version = "0.3.2", features = [
  "CALayer",
  "CAOpenGLLayer",
  "CAMediaTiming",
  "objc2-open-gl",
  "objc2-core-video",
  "objc2-core-foundation",
] }
objc2-open-gl = "0.3.2"
objc2-core-video = "0.3.2"
libc = "0.2.186"
